<resources>
    <string name="app_name">FirebaseTest</string>
    <string name="password_label">Password :</string>
    <string name="email_label">Email address</string>
    <string name="btn_log_in_label">log in</string>
    <string name="sign_in_label">Already have an account?</string>
    <string name="sign_in_btn_label">Sign In</string>
    <string name="repeat_password_label">Repeat password</string>
    <string name="registration_btn">sign in</string>
</resources>